# Lab_8

./: CMakeLists.txt  Doxyfile  README.md  server.cpp
data/: data.txt
html/: actor_8h.html  actor_8h__dep__incl.map  actor_8h__dep__incl.md5  actor_8h__incl.map  actor_8h__incl.md5  actor_8h_source.html  actorsLoader_8h.html  actorsLoader_8h__dep__incl.map  actorsLoader_8h__dep__incl.md5  actorsLoader_8h__incl.map  actorsLoader_8h__incl.md5  actorsLoader_8h_source.html  annotated.html  classActor-members.html  classActor.html  classActorsLoader-members.html  classActorsLoader.html  classServer-members.html  classServer.html  classes.html  dir_000005_000004.html  dir_18e3d3a0a7cc6d5eef287377142fa0c1.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e3295cd5b36c70dba666f4ac52ad2d70.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  server_8h.html  server_8h__incl.map  server_8h__incl.md5  server_8h_source.html  structRequest-members.html  structRequest.html
include/: actor.h  actorsLoader.h  server.h
latex/: actor_8h.tex  actor_8h__dep__incl.md5  actor_8h__incl.md5  actorsLoader_8h.tex  actorsLoader_8h__dep__incl.md5  actorsLoader_8h__incl.md5  annotated.tex  classActor.tex  classActorsLoader.tex  classServer.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  server_8h.tex  server_8h__incl.md5  (+1 more)
(+17 files in other folders)
